# Nibbler

./: CMakeLists.txt  set_env.sh
lib1/: CMakeLists.txt
lib1/inc/: Lib1.hpp  LibAbstract.hpp
lib1/src/: maintain.cpp
lib2/: CMakeLists.txt
lib2/inc/: Lib2.hpp
lib2/src/: lib2main.cpp
main/: CMakeLists.txt  Makefile  main
main/inc/: LibAbstract.hpp
main/src/: main.cpp
